--- a/styles.css
+++ b/styles.css
@@ -1537,6 +1537,7 @@ ul {
   width: 50px;
   height: 50px;
   background-color: #25d366;
+  color: var(--bg-light); 
   border-radius: 50%;
   display: flex;
   align-items: center;
